# Franberchez_repository

./: README.md  archivo.txt  archivo_nuevo.txt  eje3.c  ejemploMD.md  fran.md  historia_usario.md  linea.c  linearecursiva.c  practica.cpp
ALGORITMICA/1_PRACTICA/: clase_tiempo.hpp  funciones_matriz.cpp  funciones_matriz.hpp  funciones_strassen.cpp  funciones_strassen.hpp  funciones_vector.cpp  funciones_vector.hpp  main.cpp  quicksort.cpp  rellenaFichero.cpp  strassen.cpp  strassen.hpp  sumatorios.cpp  tiempos_estimados_matriz.cpp  tiempos_estimados_strassen.cpp  tiempos_estimados_vector.cpp
ALGORITMICA/2_PRACTICA/: CMakeLists.txt  Makefile  funciones.cpp  funciones.hpp  menu.cpp  opciones.cpp
ALGORITMICA/3_PRACTICA/: CMakeLists.txt  funciones.cpp  funciones.hpp  menu.cpp  operadoresExternos.cpp
ED/: Monomio.hpp  operadoresExternosMonomios.cpp  operadoresExternosMonomios.hpp  prueba.cpp
ED/practica1/: Monomio.cpp  funcionesAuxiliares.cpp  funcionesAuxiliares.hpp  principal.cpp
ED/practica2/: Monomio.cpp  Polinomio.cpp  Polinomio.hpp  PolinomioInterfaz.hpp  funcionesAuxiliares.cpp  operadoresExternosPolinomios.cpp  operadoresExternosPolinomios.hpp  principal.cpp
ED/practica3/: ANOTACIONES  (+1 more)
FSIV/: CMakeLists.txt  copia.cpp  practica.cpp  prg4.cpp  prg5.cpp
PAS/: cadenas.c  common.h  ejercicio1.c  ejercicio2.c  ejercicio2_version_sin_resultado.c  ejercicio3-cliente.c  ejercicio3-servidor.c  funciones_ficheros.c  practica1.txt  strtok.c
REDES/: cliente(copia).c  clienteUDP.c  cliente_ant.c  funcionSelect.c  funcionTiempo.c  servidor(copia).c  servidorUDP.c
(+56 files in other folders)
